fixed padding on section text on mobile

--- a/landing_page/style.css
+++ b/landing_page/style.css
@@ -545,7 +545,7 @@ nav {
     display: grid;
     grid-template-columns: 30rem;
     grid-template-rows: 30rem 20rem;
-
+   margin-left: 10px;
 
   }
 
@@ -725,7 +725,7 @@ nav {
     margin-bottom: 6rem;
     font-size: 1rem;
 
-    margin-left: 6rem;
+    margin-left: 7rem;
     background-color: white;
     color: black;
     display: flex;
